[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Grave/grave1.tres" type="Texture" id=1]
[ext_resource path="res://Sprites/Grave/grave2.tres" type="Texture" id=2]
[ext_resource path="res://Sprites/Grave/grave3.tres" type="Texture" id=3]
[ext_resource path="res://Entities/Grave/Grave.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 42.107

[node name="Grave" type="Area2D" groups=["grave"]]
collision_layer = 16
collision_mask = 32
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -36 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FlashyTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[connection signal="area_entered" from="." to="." method="_on_Grave_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Grave_area_exited"]
